--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   </head>
 
   <body>
-    <h1>Keep Calm And Wipe Your Tiles</h1>
+    <h1>Keep Calm <br> And Wipe Your Tiles</h1>
     <div class="flexbox-container">
       <div class="flexbox-item Introduction">
         <div class="Introduction">
