OBJECTS AND ARRAYS

--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>css med flexbox</title>
+    <title>Playground</title>
     <link rel="stylesheet" href="stylesheet.css" />
     <script src="script.js" defer></script>
   </head>
-
+ 
   <body>
     <h1>Keep Calm <br> And Wipe Your Tiles</h1>
     <div class="flexbox-container">
@@ -55,6 +55,7 @@
           <li id="brand2">Name of another brand</li>
           <li id="brand3">Name of a third brand</li>
         </ol>
+
       </div>
     </div>
 
